@@ -1,5 +1,11 @@
 2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* test/pthread1.c: New.
+
+	* Makefile: Build and run test/pthread1.c.
+
+2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* Makefile (libc_common_src_files): Remove unistd/sigsuspend.c
 	and replace arch-$(ARCH)/bionic/__sigsuspend.c with
 	arch-$(ARCH)/bionic/sigsuspend.c for x32.
